--- a/client/framework/index.jade
+++ b/client/framework/index.jade
@@ -2,6 +2,6 @@ doctype xml
 doctype 5
 html(xmlns="http://www.w3.org/1999/xhtml")
   head
-    title bbx
+    title flora
     script(src="/vendor/require.js", data-main="flora")
   body
