--- a/client/framework/index.jade
+++ b/client/framework/index.jade
@@ -4,4 +4,5 @@ html(xmlns="http://www.w3.org/1999/xhtml")
   head
     title flora
     script(src="/vendor/require.js", data-main="flora")
+    link(href="flora.css", rel="stylesheet")
   body
