--- a/client/framework/flora.styl
+++ b/client/framework/flora.styl
@@ -1,2 +1,4 @@
 html
-  background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0));
+  height: 100%
+  background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0))
+  background-image: url('images/cat.jpg')
