--- a/client/framework/flora.styl
+++ b/client/framework/flora.styl
@@ -1,4 +1,6 @@
 html
   height: 100%
-  background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0))
-  background-image: url('images/cat.jpg')
+  //background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0))
+  //background-image: url('images/cat.jpg')
+  body
+    margin: 0px
