--- a/client/framework/example/templates/messagebox.jade
+++ b/client/framework/example/templates/messagebox.jade
@@ -1,6 +1,5 @@
 h3 Flora Example Running
 .text
   p Grats, it's working.
-  p 
-    |Unfortunately there is no coffee.main file in the root of your project so the example is being shown instead.
-    |To fix this you can either create one from scratch, or copy the entire example directory.
+  p But there is no main.coffee file in the root of your project.
+  p Either create one from scratch, or copy the entire example directory and work from there.
