--- a/examples/test/styles/example.styl
+++ b/examples/test/styles/example.styl
@@ -3,6 +3,9 @@ fore-color = rgba(168,168,168,1.0)
 back-color-1 = rgba(27,27,32,1.0)
 back-color-2 = rgba(64,64,64,1.0)
 
+color-1 = rgba(64,168,64,1.0)
+color-2 = rgba(192,64,64,1.0)
+
 
 html
   height: 100%
@@ -11,16 +14,15 @@ html
   color: fore-color
   text-shadow: 1px 1px 3px rgba(0,0,0,0.5)
 
-.messagebox
+.console
   position: relative
   top: 120px
-  width: 480px  
+  width: 640px  
   margin: 0px auto
   border: solid 2px fore-color
   border-radius: 4px
   box-shadow: 2px 2px 12px rgba(0,0,0,0.5)
   background-color: rgba(0,0,0,0.2)
-
 
   h3
     margin: 8px
@@ -31,3 +33,44 @@ html
     font-size: 14px
     p
       margin: 0.5em 0
+
+  .form
+    position: relative
+    display: block
+    border: solid fore-color 1px
+    border-radius: 3px
+    width: 90%
+    margin: 0px auto
+    overflow: hidden
+    height: 28px
+    input.frame
+      position: absolute
+      left: 1px
+      top: 1px
+      bottom: 1px
+      right: 50px
+      padding: 0px 6px
+      border: none
+      background-color: rgba(0,0,0,0.8)
+      text-align: left
+      color: fore-color
+    input.send
+      position: absolute
+      right: 1px
+      top: 1px
+      bottom: 1px
+      width: 50px
+
+  .frames
+    position: relative
+    width: 90%
+    margin: 4px auto
+    padding: 2px
+    overflow: hidden
+
+    font-family: monospace
+
+    .frame.to
+      color: color-2
+    .frame.from
+      color: color-1
