--- a/examples/test/templates/wsconsole.jade
+++ b/examples/test/templates/wsconsole.jade
@@ -1,6 +1,7 @@
 h3 Websocket tester
 .form
-  input.frame.js-frame(type="text", placeholder="...")
+  .frame
+    input.js-frame(type="text", placeholder="...")
   input.send.js-send(type="button", value="Send")
 
 .frames.js-frames
