--- a/examples/test/templates/wsconsole.jade
+++ b/examples/test/templates/wsconsole.jade
@@ -1,7 +1,8 @@
 h3 Websocket tester
 .form
   .frame
-    input.js-frame(type="text", placeholder="...")
+    input.js-channel.channel(type="text", placeholder="echo", value="echo")
+    input.js-data.data(type="text", placeholder="...")
   input.send.js-send(type="button", value="Send")
 
 .frames.js-frames
