--- a/examples/test/styles/example.styl
+++ b/examples/test/styles/example.styl
@@ -52,14 +52,29 @@ html
       top: 1px
       bottom: 1px
       right: 64px
-      input
-        width: 100%
-        height: 100%
+      input 
         padding: 0px 6px
         border: none
         background-color: rgba(0,0,0,0.8)
         text-align: left
         color: fore-color
+
+      .channel
+        position: absolute
+        display: block
+        top: 0px
+        bottom: 0px
+        left: 2px
+        width: 60px
+
+      .data
+        position: absolute
+        display: block
+        top: 0px
+        bottom: 0px
+        left: 74px
+        right: 0px
+
     input.send
       position: absolute
       right: 1px
@@ -67,16 +82,25 @@ html
       bottom: 1px
       width: 50px
 
-  .frames
-    position: relative
-    width: 90%
-    margin: 4px auto
-    padding: 2px
-    overflow: hidden
+.frames
+  position: relative
+  width: 90%
+  margin: 4px auto
+  padding: 2px
+  overflow: hidden
 
-    font-family: monospace
+  font-family: monospace
 
-    .frame.to
-      color: color-2
-    .frame.from
-      color: color-1
+  .frame.to
+    color: color-2
+  .frame.from
+    color: color-1
+
+.debug
+  position: fixed
+  font-size: 10px
+  bottom: 0px
+  left: 0px
+  
+  .frame .value
+    white-space: pre
