--- a/examples/test/styles/example.styl
+++ b/examples/test/styles/example.styl
@@ -75,12 +75,14 @@ html
         left: 74px
         right: 0px
 
-    input.send
+    .send
       position: absolute
       right: 1px
       top: 1px
       bottom: 1px
       width: 50px
+      border: solid rgba(255,255,255,0.2) 1px
+      line-height:100%
 
 .frames
   position: relative
