--- a/examples/test/templates/wsconsole.jade
+++ b/examples/test/templates/wsconsole.jade
@@ -3,6 +3,6 @@ h3 Websocket tester
   .frame
     input.js-channel.channel(type="text", placeholder="echo", value="echo")
     input.js-data.data(type="text", placeholder="...")
-  input.send.js-send(type="button", value="Send")
+  .send.js-send Send
 
 .frames.js-frames
