--- a/examples/test/styles/example.styl
+++ b/examples/test/styles/example.styl
@@ -99,9 +99,11 @@ html
 
 .debug
   position: fixed
-  font-size: 11px
+  font-size: 10px
   bottom: 0px
   left: 0px
   
-  .frame .value
+  .frame
+    background-color: rgba(0,0,0,0.1)
+  .frame:hover .value
     white-space: pre
