--- a/examples/test/styles/example.styl
+++ b/examples/test/styles/example.styl
@@ -18,8 +18,9 @@ html
 .console
   position: relative
   top: 0px
-  width: 640px  
-  margin: 120px auto
+  max-width: 640px  
+  width: 90%
+  margin: 5% auto
   border: solid 2px fore-color
   border-radius: 4px
   box-shadow: 2px 2px 12px rgba(0,0,0,0.5)
