--- a/client/framework/index.jade
+++ b/client/framework/index.jade
@@ -2,7 +2,14 @@ doctype xml
 doctype 5
 html(xmlns="http://www.w3.org/1999/xhtml")
   head
+    meta(name="viewport", content="initial-scale=1.0")
     title flora
     script(src="/vendor/require.js", data-main="flora")
     link(href="flora.css", rel="stylesheet")
   body
+    #loader
+      div: div F
+      div: div L
+      div: div O
+      div: div R
+      div: div A
