--- a/examples/chat/templates/chat/main.jade
+++ b/examples/chat/templates/chat/main.jade
@@ -1,3 +1,4 @@
 .chat-window
   .messages
-  input.message(type='text')
+    .message Blar blar blksjflkjfa slkdfj alskfdj asdf
+  input.send-message.js-send-message(type='text')
