Chat working end to end

--- a/client/framework/index.jade
+++ b/client/framework/index.jade
@@ -2,7 +2,7 @@ doctype xml
 doctype 5
 html(xmlns="http://www.w3.org/1999/xhtml")
   head
-    meta(name="viewport", content="initial-scale=1.0")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     title flora
     script(src="/vendor/require.js", data-main="flora")
     link(href="flora.css", rel="stylesheet")
@@ -13,3 +13,4 @@ html(xmlns="http://www.w3.org/1999/xhtml")
       div: div O
       div: div R
       div: div A
+    script document.getElementById('loader').className = 'loader';
