--- a/examples/chat/styles/example.styl
+++ b/examples/chat/styles/example.styl
@@ -11,6 +11,11 @@ color-1(alpha=1.0)
 color-2(alpha=1.0)
   rgba(192,64,64,alpha)
 
+// @font-face 
+//   font-family: 'VT323'
+//   font-style: normal
+//   font-weight: 400
+//   src: local('VT323'), local('VT323-Regular'), url(http://themes.googleusercontent.com/static/fonts/vt323/v5/LfMzj2MWAZU6qzlnp1MNbg.woff) format('woff')
 
 
 html
@@ -47,6 +52,7 @@ html
     overflow-y: scroll
     
     .message
+      // font-family: 'VT323', monospace
       box-sizing: border-box   
       display: block
       width: 100%
