--- a/client/framework/index.jade
+++ b/client/framework/index.jade
@@ -4,7 +4,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     title flora
-    script(src="/vendor/require.js", data-main="flora")
+    script(src="/vendor/require.min.js", data-main="flora")
     link(href="flora.css", rel="stylesheet")
   body
     #loader
