--- a/examples/chat/styles/example.styl
+++ b/examples/chat/styles/example.styl
@@ -32,14 +32,15 @@ html
   // overflow: hidden
   // margin: 40px auto 0px auto
   margin: auto
-  left: 20px
-  right: 20px
-  top: 20px
-  bottom: 20px
+  left: 10px
+  right: 10px
+  top: 10px
+  bottom: 10px
   max-width: 480px
   max-height: 640px
   padding: 0px
   border: solid 2px fore-color(0.3)
+  // box-shadow: 0px 0px 8px fore-color(0.5)
 
   .messages
     position:absolute
