--- a/examples/chat/templates/chat/main.jade
+++ b/examples/chat/templates/chat/main.jade
@@ -1,3 +1,6 @@
 .chat-window
-  .messages
-  input.send-message.js-send-message(type='text')
+  .panel.panel-default
+    .panel-body.messages
+    .panel-footer
+      input.input-sm.form-control.send-message.js-send-message(type='text', placeholder='Type a message and press enter to send.')
+
