--- a/examples/chat/templates/navbar.jade
+++ b/examples/chat/templates/navbar.jade
@@ -10,14 +10,16 @@
   
   .navbar-collapse.collapse
     ul.nav.navbar-nav
-      li.active
-        a chat
-      li
-        a options
-    
-    ul.nav.navbar-nav.navbar-right
       li
         input.input-sm.form-control.nickname.js-nickname(placeholder='nickname')
+      
+      //- li.active
+      //-   a chat
+      //- li
+      //-   a options
+    
+    ul.nav.navbar-nav.navbar-right
+      li: a(href="http://jsfiddle.net/ctrlfrk/xQs4F/1/show/") errors
 
 //- .container
 //-   .navbar-header
