--- a/examples/chat/templates/navbar.jade
+++ b/examples/chat/templates/navbar.jade
@@ -19,6 +19,7 @@
       //-   a options
     
     ul.nav.navbar-nav.navbar-right
+      li: a.js-ping
       li: a(href="http://jsfiddle.net/ctrlfrk/xQs4F/1/show/") errors
 
 //- .container
