--- a/client/framework/flora.styl
+++ b/client/framework/flora.styl
@@ -3,51 +3,151 @@ html
   height: 100%
   //background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0))
   //background-image: url('images/cat.jpg')
-  background-color: rgba(0,0,0,1.0)
+  //background-color: rgba(0,0,0,1.0)
+  background-color: rgba(255,255,255,1.0)
   body
     margin: 0px
-    
-@keyframes loading
-  from
-    left: 95%
-    opacity: 0.0
-  33%
-    opacity: 1.0
-  67%
-    left: 5%
-    opacity: 0.0
-  to
-    left: 5%
-    opacity: 0.0
 
-
-.loader
-  position: absolute
-  top: 33%
-  width: 100%
-
-  > div
+  #loader
     position: absolute
-    height: 0px
-    opacity: 0.0
-    animation: loading 3s ease-in-out infinite
-
-    &:nth-child(1)
-      animation-delay: 1.0s
+    width: 100%
+    height: 64px
+    top: 0px
+    bottom: 0px
+    left: 0px
+    right: 0px
+    margin: auto
+    line-height: 64px
+    font-size: 64px
+    text-align: center
+    color: rgba(222,222,222,1.0)
+  
+  #loader .dot
+    animation: dotdotdot 3s ease-in-out infinite
     &:nth-child(2)
-      animation-delay: 1.25s
+      animation-delay: 0.00s
     &:nth-child(3)
-      animation-delay: 1.50s
+      animation-delay: 0.50s
     &:nth-child(4)
-      animation-delay: 1.75s
-    &:nth-child(5)
-      animation-delay: 2.0s
+      animation-delay: 1.00s
 
-    > div
-      position: relative
-      left: -50%
-      top: -36px
-      text-shadow: 0px 0px 16px rgba(255,255,255,1.0)
-      font-size: 72px
-      color: rgba(0,0,0,0.0)
-      font-family: sans-serif
+@keyframes dotdotdot
+  from
+    opacity: 1.0
+  33%
+    opacity: 0.0
+  66%
+    opacity: 1.0
+  to
+    opacity: 1.0
+
+// @keyframes loading
+//   from
+//     left: 95%
+//     opacity: 0.0
+//   33%
+//     opacity: 1.0
+//   67%
+//     left: 5%
+//     opacity: 0.0
+//   to
+//     left: 5%
+//     opacity: 0.0
+
+
+// .loader
+//   position: absolute
+//   top: 33%
+//   width: 100%
+
+//   > div
+//     position: absolute
+//     height: 0px
+//     opacity: 0.0
+//     animation: loading 3s ease-in-out infinite
+
+//     &:nth-child(1)
+//       animation-delay: 1.0s
+//     &:nth-child(2)
+//       animation-delay: 1.25s
+//     &:nth-child(3)
+//       animation-delay: 1.50s
+//     &:nth-child(4)
+//       animation-delay: 1.75s
+//     &:nth-child(5)
+//       animation-delay: 2.0s
+
+//     > div
+//       position: relative
+//       left: -50%
+//       top: -36px
+//       text-shadow: 0px 0px 16px rgba(255,255,255,1.0)
+//       font-size: 72px
+//       color: rgba(0,0,0,0.0)
+//       font-family: sans-serif
+
+
+
+
+// #bars div div
+//     position: absolute
+//     background-color: rgba(222,222,222,0.2)
+//     box-shadow: 0px 0px 3px rgba(222,222,222,0.3)
+
+// #bars #vertical div
+//     left: 50%
+//     width: 1px
+//     height: 100%
+//     -webkit-transition: left 1.4s linear 0.25s
+
+// #bars #horizontal div
+//     top: 50%
+//     width: 100%
+//     height: 1px
+//     -webkit-transition: top 1.4s linear 0.5s
+
+// #circle
+//     position: absolute
+//     width: 100px
+//     height: 100px
+//     top:0px
+//     left:0px
+//     right:0px
+//     bottom:0px
+//     margin: auto
+//     border: solid 16px rgba(222,222,222,0.6)
+//     border-radius: 100px
+//     box-shadow: 0px 0px 30px rgba(222,222,222,0.8)
+
+// #cutouts > div
+//     position: absolute;
+//     top: 50%
+//     left: 50%
+//     height: 100%
+//     width: 100%
+//     transform-origin: 0px 0px
+
+// #cutouts > div >div
+//     background-color: rgba(255,255,255,0.8)
+//     box-shadow: 0px 0px 4px rgba(255,255,255,0.8)
+//     height: 100%
+//     width: 100%
+//     transform-origin: 0px 0px
+
+
+// @keyframes segment-rotate
+//   0%
+//     transform: rotate(0deg)
+
+//   100%
+//     transform: rotate(360deg)
+
+// @keyframes segment-pulse
+//   0%
+//     transform: skewX(30deg)
+
+//   50%
+//     transform: skewX(80deg)
+
+//   100%
+//     transform: skewX(30deg)
