--- a/examples/chat/styles/example.styl
+++ b/examples/chat/styles/example.styl
@@ -9,6 +9,11 @@ body
   .nickname
     margin: 10px
 
+  .ping-circle
+    color: black
+    border-radius: 4px
+    padding: 0px 4px
+
 .content
   position: absolute
   top: 50px
