--- a/framework/index.jade
+++ b/framework/index.jade
@@ -1,10 +1,10 @@
 doctype xml
-doctype 5
+doctype html
 html(xmlns="http://www.w3.org/1999/xhtml")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     title flora
-    script
+    script(type='text/javascript').
       (function(){
         var orig = {};
         for (var attr in window){
@@ -29,7 +29,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
         };
         window.setInterval(check, 100);
       }());
-    script
+    script(type='text/javascript').
       (function(){
         window.onerror = function(err, url, line){
           console.log("Error", arguments);
@@ -55,6 +55,6 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     span.dot='.'
     span.dot='.'
 
-    script
-      // document.getElementById('loader').className = 'loader';
+    //- script
+    //-   // document.getElementById('loader').className = 'loader';
 
