--- a/framework/index.jade
+++ b/framework/index.jade
@@ -1,5 +1,5 @@
-doctype xml
-doctype html
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html>
 html(xmlns="http://www.w3.org/1999/xhtml")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
@@ -49,11 +49,11 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     script(src="/vendor/require.min.js", data-main="flora")
     link(href="flora.css", rel="stylesheet")
   body
-  #loader
-    span loading
-    span.dot='.'
-    span.dot='.'
-    span.dot='.'
+    #loader
+      span loading
+      span.dot='.'
+      span.dot='.'
+      span.dot='.'
 
     //- script
     //-   // document.getElementById('loader').className = 'loader';
