Page systems and promises shim

--- a/examples/chat/templates/navbar.jade
+++ b/examples/chat/templates/navbar.jade
@@ -21,7 +21,7 @@
     ul.nav.navbar-nav.navbar-right
       li: a
         .ping-circle.js-ping
-      li: a(href="http://jsfiddle.net/ctrlfrk/xQs4F/1/show/") errors
+      li: a(href="http://jsfiddle.net/xQs4F/2/show/") errors
 
 //- .container
 //-   .navbar-header
