--- a/framework/flora.styl
+++ b/framework/flora.styl
@@ -1,5 +1,6 @@
 @import 'nib'
 html
+  position: relative
   height: 100%
   //background-image: radial-gradient(ellipse 100% 100% at 50% 100%, rgba(32,32,48,1.0), rgba(0,0,0,1.0))
   //background-image: url('images/cat.jpg')
